Усилены маршрутизация моделей, AI-выполнение и регрессионные тесты (V54)
Управление моделями и маршрутизация:
- Ужесточена проверка каталога и маршрутов: новые разрешённые решения
  привязаны к действующей неизменяемой версии модели и физическому runtime.
- Исключён разрешённый маршрут без подтверждённого снимка каталога;
  неоднозначное соответствие моделей и недоступные версии отклонены.
- Согласованы проверки возможностей модели, текстовых модальностей,
  VISION/IMAGE, ограничений организации и фактического провайдера.
- Усилены целостность хеша решения, нормализация времени PostgreSQL,
  привязка версии политики и воспроизводимость сведений о маршруте.
- Уточнены расчёт входного бюджета, ограничения стоимости и предварительная
  проверка политики без ослабления tenant-изоляции.

Резервирование и выполнение запросов:
- Связаны ChatTurn, clientRequestId, providerOperationId, решение маршрута,
  физическая модель и план выполнения в единую проверяемую идентичность.
- Добавлена неизменяемая фиксация SHA-256 исходного запроса до RAG в той же
  транзакции, что и резервирование; запрещена незаметная подмена истории,
  инструкций и зарезервированных лимитов перед вызовом провайдера.
- Сохранено только разрешённое дополнение контекста RAG в пределах исходного
  конверта; повторно проверены идентичность и лимиты перед внешним вызовом.
- Исключено повторное создание физического плана для уже начатой операции;
  сохранены идемпотентность, fencing и терминальные состояния ChatTurn.
- Усилено разделение логического результата чата и физического исхода
  провайдерского запроса; неподтверждённый результат не превращён в успех.

Провайдеры, повторы и учёт стоимости:
- Ужесточена обработка ответов OpenAI и Anthropic: фактическая модель
  берётся из ответа провайдера, а не подменяется запрошенной моделью.
- Ответы с отсутствующей или некорректной физической моделью отнесены
  к неоднозначным ошибкам протокола без небезопасного повтора.
- Разграничены подтверждённо отклонённые запр